<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.midterm3.MainActivity">
    <item
        android:id="@+id/FirstFragment"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_baseline_house_foreground"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/SecondFragment"
        android:orderInCategory="101"
        android:title="@string/second_fragment_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/ThirdFragment"
        android:orderInCategory="102"
        android:title="@string/third_fragment_label"
        app:showAsAction="never"/>
</menu>